--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,11 @@
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
+    "allowImportingTsExtensions": false,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "types": ["node"],
     "incremental": true,
     "paths": {
       "@/*": ["./*"]
