--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
-    "@reduxjs/toolkit": "^2.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "graphql": "^16.9.0",
     "graphql-ws": "^5.16.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.439.0",
+    "mobx": "^6.13.5",
+    "mobx-react-lite": "^4.0.7",
+    "mobx-utils": "^6.1.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
-    "react-redux": "^9.1.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
@@ -36,9 +37,9 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.3",
     "@graphql-codegen/near-operation-file-preset": "^3.0.0",
+    "@graphql-codegen/schema-ast": "^4.1.0",
     "@graphql-codegen/typescript-operations": "^4.3.1",
     "@graphql-codegen/typescript-react-apollo": "^4.3.2",
-    "@graphql-codegen/schema-ast": "^4.1.0",
     "@graphql-eslint/eslint-plugin": "^3.20.1",
     "@it-incubator/eslint-config": "^1.0.3",
     "@it-incubator/prettier-config": "^0.1.2",
